update test case

--- a/package.json
+++ b/package.json
@@ -92,11 +92,10 @@
         "statements": 80
       }
     },
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/setupTests.ts"
+    "transformIgnorePatterns": [
+      "/node_modules/(?!axios).+\\.js$"
     ],
-    "testEnvironment": "jsdom",
-    "moduleNameMapping": {
+    "moduleNameMapper": {
       "\\.(css|less|scss|sass)$": "identity-obj-proxy",
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/__mocks__/fileMock.js"
     }
